[gd_scene load_steps=5 format=3 uid="uid://drukt8axge3hj"]

[ext_resource type="Script" uid="uid://73reeqvjbvgm" path="res://scripts/special_1.gd" id="1_woooy"]
[ext_resource type="Texture2D" uid="uid://b8fb84e84l413" path="res://assets/Sprite_ability.png" id="2_woooy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_62lw2"]
radius = 559.752

[sub_resource type="SpriteFrames" id="SpriteFrames_miod4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_woooy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Special_1" type="Area2D"]
top_level = true
collision_layer = 0
collision_mask = 4
script = ExtResource("1_woooy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_62lw2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(35.955, 35.955)
sprite_frames = SubResource("SpriteFrames_miod4")

[node name="Special_1_Duration" type="Timer" parent="."]

[node name="Special_1Tick" type="Timer" parent="."]

[connection signal="timeout" from="Special_1_Duration" to="." method="_on_special_1_duration_timeout"]
[connection signal="timeout" from="Special_1Tick" to="." method="_on_tick_timeout"]
